--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "deep-email-validator": "^0.1.21",
-    "dotenv": "^16.0.3",
+    "dotenv-flow": "^3.2.0",
     "express": "^4.18.1",
     "faunadb": "^4.7.0",
     "jsonwebtoken": "^8.5.1"
