Refinements in the reg and auth flow, store refresh tokens in redis

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+#run node in terminal and then run
+#require('crypto').randomBytes(64).toString('hex')
+#to generate your own token and store it in your .env(.env.local) file
 JWT_LOGIN_SECRET=JWT_LOGIN_SECRET
 JWT_REFRESH_SECRET=JWT_REFRESH_SECRET
 FAUNA_SECRET_KEY=FAUNA_SECRET_KEY
+FAUNA_URL=https://graphql.eu.fauna.com/graphql
