--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.1",
     "faunadb": "^4.7.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "redis": "^4.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
